package com.trello.project.entities;

import java.time.LocalDateTime;
import java.util.UUID;

import com.trello.project.enums.Role;
import com.trello.project.enums.Status;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.Table;
import lombok.Data;

@Entity
@Data
@Table(name = "invitations")
public class Invitation {
    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "board_id", nullable = false)
    private Board board;

    // ID del usuario emisor
    @Column(name = "sender_user_id", nullable = false)
    private UUID senderUserId;

    // ID del usuario receptor
    // Solamente se invita a usuarios registrados
    @Column(name = "recipient_user_id", nullable = false)
    private UUID recipientUserId;

    private String message;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private Role role;

    // Estado de la aceptación: aceptada o rechazada
    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private Status status;

    // Fecha de envio (no es lo mismo que fecha de creación)
    // @CreationTimestamp
    // @Column(nullable = false, updatable = false)
    @Column(nullable = false)
    private LocalDateTime sendedAt;

    // Fecha de aceptación
    private LocalDateTime acceptedAt;
}
