package com.trello.project.enums;

public enum Role {
    ADMIN,
    MEMBER,
    VIEWER
}
