package com.trello.project.enums;

public enum Status {
    // Aceptado por el receptor
    ACCEPTED,
    // Rechazado por el receptor
    REJECTED,
    // Aun no confirmado
    UNCONFIRMED
}
