@startuml Project
hide methods
skinparam ArrowFontSize 14

entity Workspace {
    - id: UUID
    - name: String
    - description: String
    - ownerUserId: UUID
    - createdAt: LocalDateTime
}

entity Board {
    - id: UUID
    - name: String
    - description: String
    - createdAt: LocalDateTime
}

entity Invitation {
    - id: UUID
    - senderUserId: UUID
    - recipientUserId: UUID
    - message: String
    - sendedAt: LocalDateTime
    - acceptedAt: LocalDateTime
}

entity Member {
    - id: UUID
    - userId: UUID
    - joinedAt: LocalDateTime
    - active: boolean
}

enum Role {
    ADMIN
    MEMBER
    VIEWER
}

enum Status {
    ACCEPTED
    REJECTED
    UNCONFIRMED
}

Workspace "1" *-- "0..*" Board
Board " 1  " *-- "0..*  " Member
Board "1  " *-- "0..*" Invitation
Member "0..*" --> "1  " Role
Invitation "0..*  " --> "    1" Role
Invitation "0..*" --> "1" Status

@enduml